--- a/foundry.toml
+++ b/foundry.toml
@@ -2,10 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+via-ir = true
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/=lib/openzeppelin-contracts/",
-    "@uma/=lib/protocol/packages/",
+    "@uma/core/contracts/=lib/protocol/packages/core/contracts/",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
