--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,8 @@ src = "src"
 out = "out"
 libs = ["lib"]
 via-ir = true
+optimizer = true
+optimizer-runs = 200
 remappings = [
     "forge-std/=lib/forge-std/src/",
     "@openzeppelin/=lib/openzeppelin-contracts/",
