--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,7 @@
 	url = https://github.com/UMAprotocol/protocol
 [submodule "lib/v3-core"]
 	path = lib/v3-core
-	url = https://github.com/Uniswap/v3-core
+	url = https://github.com/uniswap/v3-core
 [submodule "lib/v3-periphery"]
 	path = lib/v3-periphery
-	url = https://github.com/Uniswap/v3-periphery
+	url = https://github.com/uniswap/v3-periphery
